filters for performance

--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -18,6 +18,7 @@
     <meta name="description" content="Algotrader server dashboard">
     <meta name="msapplication-tap-highlight" content="no">
 
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/app_styles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/arch_ui.css') }}">
     <link href="{{ url_for('static', filename='styles/base_app.scss') }}">
 
@@ -205,15 +206,15 @@
                                 My Performance
                             </a>
                         </li>
-                        <li>
-                            <!--                            <a href="/userview/portfoliostatistics" >-->
-                            <a target="_blank"
-                               href="https://www.interactivebrokers.co.uk/portal/?action=ACCT_MGMT_MAIN&loginType=1&clt=0&RL=1#/portfolio/performance">
+<!--                        <li>-->
+<!--                            &lt;!&ndash;                            <a href="/userview/portfoliostatistics" >&ndash;&gt;-->
+<!--                            <a target="_blank"-->
+<!--                               href="https://www.interactivebrokers.co.uk/portal/?action=ACCT_MGMT_MAIN&loginType=1&clt=0&RL=1#/portfolio/performance">-->
 
-                                <i class="metismenu-icon pe-7s-graph2"></i>
-                                Portfolio performance
-                            </a>
-                        </li>
+<!--                                <i class="metismenu-icon pe-7s-graph2"></i>-->
+<!--                                Portfolio performance-->
+<!--                            </a>-->
+<!--                        </li>-->
                         <li>
                             <a href="/station/requirements">
                                 <i class="metismenu-icon pe-7s-box1"></i>
