--- a/app/templates/userview/closedpositions.html
+++ b/app/templates/userview/closedpositions.html
@@ -72,7 +72,7 @@
                     <div class="filter-title">
                         <h5>From:</h5>
                     </div>
-                    <div>
+                    <div class="datepicker-item">
                         <input class="filter-option form-control" type="date" id="from_date" name="from_date"
                            value={{from_date}}
                            min={{min_date}} max={{max_date}}>
@@ -82,7 +82,7 @@
                     <div class="filter-title">
                         <h5>To:</h5>
                     </div>
-                    <div>
+                    <div class="datepicker-item">
                         <input class="filter-option form-control" type="date" id="to_date" name="to_date"
                                value={{to_date}}
                                min={{min_date}} max={{max_date}}>
