--- a/app/static/styles/app_styles.css
+++ b/app/static/styles/app_styles.css
@@ -14,6 +14,14 @@
     padding: .92857143em 1.14285714em;
 }
 
+.info-items{
+    flex-direction: column;
+}
+
+.label-info{
+    font-size: xx-small;
+}
+
 #closed-position-form, .filter-title{
     margin-bottom: 10px;
 }
