fix colors label

--- a/app/templates/userview/closedpositions.html
+++ b/app/templates/userview/closedpositions.html
@@ -99,11 +99,11 @@
                         </div>
                         <div class="item info-items">
                             <div class="text-success">{{succeed_positions}}</div>
-                            <div class="label-info pt-2">Success</div>
+                            <div class="label-info pt-2 text-success">Success</div>
                         </div>
                         <div class="item last-item info-items">
                             <div class="text-danger">{{failed_positions}}</div>
-                            <div class="label-info pt-2">Fail</div>
+                            <div class="label-info pt-2 text-danger">Fail</div>
                         </div>
                     </div>
                 </div>
