--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -43,6 +43,8 @@
 
             {{ dashboard_option('Invite New User', 'admin.invite_user',
             description='Invites a new user to create their own account', icon='paper plane icon') }}
+            {{ dashboard_option('Spider Statistic', 'admin.spider_statistic',
+            description='Spider process data', icon='bug icon') }}
 
         </div>
     </div>
