max intraday drop added

--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -259,6 +259,7 @@
                             <th class="text-center">Underprice(%)</th>
                             <th class="text-center">12M Momentum</th>
                             <th class="text-center">Beta</th>
+                            <th class="text-center">Max Intraday Drop %</th>
 
                         </tr>
                         </thead>
@@ -285,6 +286,7 @@
                             <td class="text-center">{{value['under_priced_pnt']}}</td>
                             <td class="text-center">{{value['twelve_month_momentum']}}</td>
                             <td class="text-center">{{value['beta']}}</td>
+                            <td class="text-center">{{value['max_intraday_drop_percent']}}</td>
                         </tr>
                         {% endfor %}
                         </tbody>
