--- a/app/static/styles/app_styles.css
+++ b/app/static/styles/app_styles.css
@@ -10,8 +10,11 @@
 .filter-items{
     display: flex;
     flex-direction: column;
-    width: 12em;
     padding: .92857143em 1.14285714em;
+}
+
+.menu .filter-items{
+    width: 12em;
 }
 
 .info-items{
@@ -47,6 +50,8 @@
 .error-tickers-modal{
     margin-top: 8% !important;
 }
+
+
 
 @media (max-width: 1000px){
     .ibkr-div{
