--- a/app/templates/admin/spider_statistic.html
+++ b/app/templates/admin/spider_statistic.html
@@ -47,7 +47,7 @@
                         {{s["start_process_time"]}}
                     </td>
                     <td class="text-center">
-                        {%if not s["error_status"]%}
+                        {%if s["error_status"] == 0%}
                         <i class="check icon green"></i>
                         {%else%}
                         <i class="times icon red"></i>
@@ -73,7 +73,7 @@
                     </td>
                     {%if s["error_tickers_num"] > 0%}
                     <td class='text-center text-danger'>
-                        <button data-data="{{s}}" type="button" class="mb-2 mr-2 btn-transition btn btn-outline-danger modal-btn">{{s["error_tickers_num"]}}</button>
+                        <button data="{{s}}" type="button" class="mb-2 mr-2 btn-transition btn btn-outline-danger modal-btn">{{s["error_tickers_num"]}}</button>
                     </td>
                     {%else%}
                     <td class='text-center'>
@@ -96,8 +96,25 @@
         $(document).ready(function () {
             $(".modal-btn").on("click", function(){
                 $(".error-tickers-modal").modal("show");
-                var data = $(this).data("data");
-                $(".error-tickers-modal").find('.modal-title').text('New message to lili')
+                var data = $(this).attr("data");
+                data = data.replaceAll("'",'"');
+                json_data = JSON.parse(data);
+                error_tickers = json_data["error_tickers"]
+                research_error_tickers = json_data["research_error_tickers"]
+                if(error_tickers.length > 0){
+                    $(".process-error").find(".item-content").html(error_tickers.join(", "))
+                    $(".process-error").show();
+                }
+                else{
+                    $(".process-error").hide();
+                }
+                if(research_error_tickers.length > 0){
+                    $(".research-error").find(".item-content").html(research_error_tickers.join(", "))
+                    $(".research-error").show();
+                }
+                else{
+                    $(".research-error").hide();
+                }
 
             })
 
@@ -122,13 +139,24 @@
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                <h5 class="modal-title" id="exampleModalLongTitle">Error tickers</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+                <div class="filter-items process-error">
+                    <div class="position-items">
+                        <div>Process error:</div>
+                        <div class="item-content pl-2"></div>
+                    </div>
+                </div>
+                <div class="filter-items research-error">
+                    <div class="position-items">
+                        <div>Research error:</div>
+                        <div class="item-content pl-2"></div>
+                    </div>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
