--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -22,8 +22,10 @@
                     </form>
                 </div>
                 <div>Trader station
-                    <div class="page-title-subheading">Last state of Algotrader station reported.
+                    <div class="page-title-subheading">
+                        Last state of Algotrader station reported.
                     </div>
+                    <div>{{datetime.now()}}</div>
                 </div>
             </div>
             <div class="page-title-actions">
