--- a/app/templates/userview/algotraderSettings.html
+++ b/app/templates/userview/algotraderSettings.html
@@ -389,7 +389,8 @@
                                     <input title="Interval to report to Server"
                                            value="{{user_settings.server_report_interval_sec}}"
                                            name="server_report_interval_sec" id="server_report_interval_sec" type="text"
-                                           class="form-control"></div>
+                                           class="form-control">
+                                </div>
                             </div>
                         </div>
                         <div class="form-row">
@@ -407,11 +408,8 @@
                             </div>
 
                         </div>
-
                     </div>
-
                     <button type="submit" class="mt-2 btn btn-primary">Save</button>
-
                 </div>
                 <div class="main-card mb-3 card">
                     <div class="card-body">
