--- a/app/templates/admin/users_monitor.html
+++ b/app/templates/admin/users_monitor.html
@@ -61,14 +61,16 @@
                 <tr>
                     <th>Restart</th>
                     <th>User email</th>
-                    <th>User status</th>
-                    <th>Market data status</th>
+                    <th class="text-center">User<br/> status</th>
+                    <th class="text-center">Market data<br/> status</th>
+                    <th class="text-center">TWS<br/> status</th>
                     <th>Margin</th>
                     <th>SMA</th>
                     <th>PnL</th>
                     <th>NET</th>
+                    <th class="text-center">Open<br/> positions</th>
                     <th>Started time</th>
-                    <th>Client version</th>
+                    <th class="text-center">Client<br/> version</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -97,6 +99,13 @@
                         {% endif %}
                     </td>
                     <td class="text-center">
+                        {% if u["tws_status"] %}
+                        <i class="check icon green"></i>
+                        {%else%}
+                        <i class="times icon red"></i>
+                        {%endif%}
+                    </td>
+                    <td class="text-center">
                         {% if u["margin"] %}
                         <i class="check icon text-secondary"></i>
                         {%endif%}
@@ -104,6 +113,7 @@
                     <td>$ {{ u["sma"] |round |int}}</td>
                     <td class="{{u['pnl_class']}}">$ {{ u["pnl"] |round |int }}</td>
                     <td>$ {{ u["net"] |round |int }}</td>
+                    <td>{{ u["num_of_open_positions"] }}</td>
                     <td>{{u["started_time"]}}</td>
                     <td>{{u["client_version"]}}</td>
                 </tr>
